# tfUtils

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  build.py  build_config.json  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  site.md  version_info.rc  version_info.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  pre-commit-and-build.yml
build_templates/: app.manifest.j2  installer.iss.j2  runtime_hook.py.j2
development/add-to-path/: index.html
development/components/: index.html
development/creating-features/: index.html
development/getting-started/: index.html
development/run-commands/: index.html
development/structure/: index.html
development/workflow/: index.html
docs/: index.md  installation.md  license.md  user-guide.md
docs/development/: add-to-path.md  components.md  creating-features.md  getting-started.md  run-commands.md  structure.md  workflow.md
docs/tutorials/: first-interface.md  weather-app.md
installation/: index.html
license/: index.html
search/: search_index.json
src/interfaces/: test.py
src/interfaces/Altium/: altium.py
src/interfaces/HW_Entwicklung/: info.md
src/interfaces/HW_Entwicklung/Altium/: altium.py  info.md  install.py
src/interfaces/Obsidian/: obsidian.py
src/interfaces/Obsidian/ObsidianTemplate/: Shortcuts.md
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  workspace.json  workspaces.json
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/codeblock-customizer/: data.json  main.js
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/numerals/: manifest.json
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/obsidian-banners/: data.json
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  styles.css
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/obsidian-file-cleaner/: manifest.json
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/oz-calendar/: data.json  main.js
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/quickadd/: data.json  main.js  manifest.json
src/interfaces/Obsidian/ObsidianTemplate/.obsidian/plugins/table-editor-obsidian/: main.js
src/interfaces/Obsidian/ObsidianTemplate/Excalidraw/Libs/: schematic_lib.excalidrawlib
src/interfaces/Obsidian/ObsidianTemplate/Templates/: Journal Vorlage.md
src/interfaces/Office/: info.md
src/interfaces/Office/Checkliste/: checkliste.py  info.md
src/interfaces/Office/Obsidian/: info.md  install.py  obsidian.py
src/interfaces/Office/Obsidian/ObsidianTemplate/: Shortcuts.md
src/interfaces/Office/Obsidian/ObsidianTemplate/.obsidian/: appearance.json  hotkeys.json  workspace.json  workspaces.json
src/interfaces/Office/Obsidian/ObsidianTemplate/.obsidian/plugins/codeblock-customizer/: data.json  styles.css
src/interfaces/Office/Obsidian/ObsidianTemplate/Excalidraw/Libs/: schematic_lib.excalidrawlib
src/interfaces/Office/Systembeschreibung/: info.md  systembeschreibung.py
src/interfaces/Projekt/: info.md  projekt.py
src/interfaces/SW_Entwicklung/: info.md
src/interfaces/SW_Entwicklung/STM32/: install_CubeMX.py
src/interfaces/SW_Entwicklung/uVision/: CMakeLists.txt  info.md  install.py  uVisionProject.py
src/interfaces/testing/: progress_bar_test.py
src/interfaces/testing/Examples/: example1.py  example2.py  info.md
src/interfaces/uVision/: .clang-format  flash.bat  uVisionProject.py  workspace_config.xml
src/lib/: console.py  interface.py  interface_loader.py  interface_viewer.py  paths.py  utils.py
src/tcss/: interface_viewer.tcss
src/tests/interfaces/HW_Entwicklung/Altium/: test_altium.py  test_install.py
src/tests/lib/: test_interface.py
tutorials/first-interface/: index.html
tutorials/weather-app/: index.html
user-guide/: index.html
(+3 files in other folders)
