[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "B", "UP"]
ignore = ["B008"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"build.py" = ["E501"]

[tool.poetry]
name = "tfutils"
version = "2.0.0"
description = "A simple and extendible cli for managing files at the TFBern"
authors = ["imgajeed <github.staging362@passmail.net>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.tfutils]
executable_name = "tfutils"
app_id = "{e3aa761f-58e4-4d53-9c37-75f86cbef4d0}"
company_name = "Student Project - TFBern"
product_name = "TFUtils CLI"
product_description = "TFBern Project Management CLI Tool"
github_repo = "https://github.com/ImGajeed76/tfUtils"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^13.9.4"
tqdm = "^4.67.0"
requests = "^2.32.3"
textual = "^0.86.1"
aiofiles = "^24.1.0"
mkdocs-material = "^9.5.44"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-minify-plugin = "^0.8.0"
aioshutil = "^1.5"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pyinstaller = "^6.11.1"
tomli = "^2.1.0"
textual-dev = "^1.6.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-print = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
